@@ -2,49 +2,49 @@ tralceCollectibles = {
   name = "tralceCollectibles",
 
   collectibles = {
+    -- Tools --
+    [ 336] = "TRINKET",
+    [8006] = "EYE",
+    [8883] = "RELICSENTINEL",
+    -- Assistants --
     [ 267] = "TYTHIS",
     [ 300] = "PIRHARRI",
     [ 301] = "NUZHIMEH",
-    [ 336] = "TRINKET",
+    [6376] = "EZABI",
+    [6378] = "FEZEZ",
+    [8994] = "BARON",
+    [8995] = "PEDDLER",
+    [9245] = "BASTIAN",
+    [9353] = "MIRRI",
+    [9745] = "ARMORY",
+    -- Mementos --
     [ 344] = "NIRNROOTWINE",
     [ 348] = "BONESNAP",
     [ 353] = "WRATHFLAME",
     [ 361] = "ILLCOIN",
     [ 596] = "STORMATRO",
     [ 598] = "JUGGKNIVES",
-    [ 601] = "MUDBALL",
-    [1108] = "BLOSSOMS",
     [1158] = "TSHARD",
-    [1174] = "EBONWOLF",
-    [1185] = "SPIDERMOUNT",
     [1228] = "LIGHTNINGSTICK",
-    [1232] = "THEOD",
-    [1385] = "MURDSTRIKE",
     [5733] = "KICKBALL",
     [5889] = "RAINBOW",
     [6046] = "DRAGONFLIGHT",
-    [6376] = "EZABI",
-    [6378] = "FEZEZ",
     [6641] = "DRAGONHORN",
-    [6932] = "SNOWBALL",
     [7225] = "WALLLIFE",
     [7862] = "TOTEM",
-    [8006] = "EYE",
     [8008] = "CAMPFIRE",
     [8072] = "MOSTLYSTABLE",
-    [8551] = "SCARAB",
     [8656] = "CANDLEFLY",
     [8834] = "VOIDSHARD",
-    [8883] = "RELICSENTINEL",
-    [8994] = "BARON",
-    [8995] = "PEDDLER",
-    [9245] = "BASTIAN",
-    [9353] = "MIRRI",
     [9361] = "INFCLEATS",
     [9362] = "DECCOIN",
     [9530] = "MEM_WITCH_BONFIRE",
     [9591] = "AGONYMIUM",
-    [9745] = "ARMORY"
+    -- Throwables --
+    [ 601] = "MUDBALL",
+    [1108] = "BLOSSOMS",
+    [6932] = "SNOWBALL",
+    [1385] = "MURDSTRIKE",
   }
 }
 
